Fixed valign of remark photos

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -115,9 +115,11 @@ input[type=range]::-webkit-slider-thumb {
     #map {
         height: 300px;
     }
+}
 
+@media only screen and (max-device-width: 480px) {
     .photo-slider {
-        height: 550px; 
+        height: 500px;
     }
 }
 
